Fixed image stretching out on iphones

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -19,6 +19,7 @@
 
 #profileImage {
     width: 500px;
+    height: 100% !important;
     max-width: 100%;
     border-radius: 50%;
     margin: 15px 0px;
